--- a/fbCharmDemo/fbCharmDemo/Info.plist
+++ b/fbCharmDemo/fbCharmDemo/Info.plist
@@ -25,6 +25,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>LucidaGrande.ttc</string>
+		<string>WawaSC-Regular.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
