更新演示动画，更新demo

--- a/fbCharmDemo/fbCharmDemo/Info.plist
+++ b/fbCharmDemo/fbCharmDemo/Info.plist
@@ -26,6 +26,7 @@
 	<array>
 		<string>LucidaGrande.ttc</string>
 		<string>WawaSC-Regular.otf</string>
+		<string>IBMPlexSans-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
