--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 #    - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
     - gem install xcpretty --no-document --quiet
     - pod --version
-    - pod repo remove master
+    - pod repo remove master --silent
     - pod setup --silent > /dev/null
     - pod repo update --silent
     - xcpretty --version
